# capara

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  pyproject.toml  test.py
.github/workflows/: release.yml  test.yml
capara/: capara.pyi  profiler.py
src/: lib.rs
tests/: test_main.py
