[tool.poetry]
name = "capara"
version = "0.1.1"
description = "Profiler for Python written in Rust especially for asyncio."
authors = ["Aviram Hassan <aviramyhassan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
isort = "^5.6.4"
mypy = "^0.790"
flake8 = "^3.8.4"
black = "^20.8b1"
flaky = "^3.7.0"
pytest-sugar = "^0.9.4"
maturin = "^0.8.3"

[tool.maturin]
rustc-extra-args = "-C target-feature=+sse2"
strip = "on"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[build-system]
requires = ["maturin"]
build-backend = "maturin"